--- a/new progekt/css/style.css
+++ b/new progekt/css/style.css
@@ -4,6 +4,9 @@
     height: 50px;
     background: #202024;
 }
+img{
+    width: 300px;
+}
 body{
     margin: 0;
 }
@@ -25,7 +28,7 @@ ul{
     padding-right: 15px;
     /*width: 15%;*/
     height: 100%;
-    background: #42424f;
+    /*background: #42424f;*/
     text-align: center;
 }
 .navBarButtonText{
